# commit-type-classifier

./: .gitignore  Makefile  README.md  pyproject.toml
.interface-design/: system.md
.streamlit/: config.toml
app/: cli.py  streamlit_app.py
data/raw/: commits_sample.csv  source.txt
data/splits/: split_summary.csv
docs/: README.md  c2_documentation.md  design-system.md  documentation.md
docs/diagrams/: README.md
docs/exports/: slides.pptx
docs/mockups/: README.md
models_saved/ensemble/: weights.json
models_saved/probs/: baseline_tfidf__test.npy  baseline_tfidf__val.npy  cnn_text__test.npy  cnn_text__val.npy  codebert__test.npy  codebert__val.npy  distilbert__test.npy  distilbert__val.npy
models_saved/reports/: baseline_tfidf.json  baseline_tfidf_val.json  cnn_text.json  cnn_text_val.json  codebert.json  codebert_val.json  comparison.csv  comparison.md  distilbert.json  distilbert_val.json  ensemble.json  ensemble_val.json
scripts/: build_slides.py  llm_classify_report.py  llm_classify_sweep.py  llm_report.py  llm_smoke.py  llm_sweep.py  smoke_test.py
src/: config.py  evaluate_all.py  history.py  inference.py  utils.py
src/data/: balance.py  download.py  preprocess.py  split.py
src/eval/: llm_classify_eval.py  llm_eval.py
src/llm/: agent.py  classifier.py  generator.py  hybrid.py  ollama_client.py  prompts.py  rag.py  voting_ensemble.py
src/models/: baseline_tfidf.py  cnn_text.py  codebert_model.py  distilbert_model.py  ensemble.py  precompute_probs.py
tests/: test_inference.py  test_preprocess.py  test_split.py
(+47 files in other folders)
