[project]
name = "c2-commit-classifier"
version = "0.1.0"
description = "AI-powered Conventional Commit classifier (message + diff)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=2.18.0",
    "huggingface-hub>=0.23.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.30.0",
    "tensorflow>=2.15.0",
    "tf-keras>=2.15.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "keras-tuner>=1.4.7",
    "tqdm>=4.66.0",
    "pydriller>=2.6",
    "tabulate>=0.10.0",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.uv]
package = false
